# repo-health-lens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/demo/: flask-health.html
docs/superpowers/plans/: 2026-07-15-issue-pr-responsiveness.md
scripts/: run_action.py
src/repo_health_lens/: __init__.py  analysis.py  cli.py  github.py  models.py  render.py  snapshots.py
tests/: test_action.py  test_analysis.py  test_cli.py  test_github.py  test_render.py  test_snapshots.py
